--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,60 @@
-.App {
-  text-align: center;
+/* #7289DA */
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
+html, body, #root {
+  min-height: 100%
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+body {
+  background:#2C2F33;
+  background-size: cover;
+  -webkit-font-smoothing: antialiased !important;
+}
+
+body, button, input {
+  font-family: 'Uni Sans Heavy', Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+.container {
+  margin: 80px auto 0;
+  max-width: 450px;
+  width: 100%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.hud {
+  height: 50px;
+  width: 100%;
+  background: #7289DA;
+}
+
+.hud button {
+  height: 100%;
+  width: 15%;
+  border: none;
+  margin: auto;
+  padding-bottom: none;
+  background: none;
+  color: #FFFFFF;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  opacity: 0.5;
+  text-transform: uppercase;
+}
+
+.hud #logo {
+  opacity: 1;
+}
+
+
+.hud button:hover {
+  opacity: 1;
 }
